--- a/src/custom/styles.css
+++ b/src/custom/styles.css
@@ -2024,7 +2024,7 @@ progress {
   background-color: #fff;
   border-color: #ffe480;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(255, 200, 0, 0.25);
+  box-shadow: 0 0 0 0.25rem rgb(171, 182, 216);
 }
 .form-control::-webkit-date-and-time-value {
   height: 1.5em;
@@ -11000,9 +11000,11 @@ header.masthead .masthead-heading {
 #portfolio .portfolio-item .portfolio-link .portfolio-hover {
   display: flex;
   position: absolute;
-  width: 100%;
-  height: 100%;
-  background: rgba(255, 200, 0, 0.9);
+  left: 50%;
+  transform: translateX(-50%);
+  width: 300px;
+  height: 199px;
+  background: #80b0ff;
   align-items: center;
   justify-content: center;
   opacity: 0;
@@ -11399,4 +11401,38 @@ header.masthead > .container > .masthead-heading  {
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
   }
+
+
+
+}
+
+
+#portfolio #portfolio-heading {
+  padding-bottom: 20px;
+}
+
+
+@media (min-width: 992px) {
+  .footer-content-1 {
+    padding-left: 30px;
+  }
+
+  .footer-content-1 > p{
+    line-height: 1.5;
+    font-family: arial;
+  }
+}
+
+
+.sky-text {
+  color : rgb(41,71,169);
+  font-weight: bold;
+}
+
+.footer-family-site {
+  font-size : 25px;
+}
+
+.footer-content-2 > p {
+  line-height: 1;
 }
