--- a/src/custom/styles.css
+++ b/src/custom/styles.css
@@ -2846,6 +2846,23 @@ textarea.form-control-lg {
 
 .btn-primary {
   --bs-btn-color: #fff;
+  --bs-btn-bg: rgb(41, 71, 169);
+  --bs-btn-border-color: rgb(41, 71, 169);
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: rgb(24, 42, 100);
+  --bs-btn-hover-border-color: rgb(24, 42, 100);
+  --bs-btn-focus-shadow-rgb: 255, 208, 38;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: rgb(24, 42, 100);
+  --bs-btn-active-border-color: rgb(24, 42, 100);
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: rgb(8, 14, 36);
+  --bs-btn-disabled-border-color: #ffc800;
+}
+
+/*.btn-primary {
+  --bs-btn-color: #fff;
   --bs-btn-bg: #ffc800;
   --bs-btn-border-color: #ffc800;
   --bs-btn-hover-color: #fff;
@@ -2859,7 +2876,8 @@ textarea.form-control-lg {
   --bs-btn-disabled-color: #fff;
   --bs-btn-disabled-bg: #ffc800;
   --bs-btn-disabled-border-color: #ffc800;
-}
+}*/
+
 
 .btn-secondary {
   --bs-btn-color: #fff;
@@ -11435,4 +11453,31 @@ header.masthead > .container > .masthead-heading  {
 
 .footer-content-2 > p {
   line-height: 1;
+}
+
+.footer-content-2 a {
+  color : gray;
+}
+
+
+.business-number {
+  height : 40px;
+  line-height: 40px;
+}
+
+.btn-address {
+  --bs-btn-color: #fff;
+  --bs-btn-bg: gray;
+  --bs-btn-border-color: #fff;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #373737;
+  --bs-btn-hover-border-color: #fff;
+  --bs-btn-focus-shadow-rgb: 255, 208, 38;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #373737;
+  --bs-btn-active-border-color: #fff;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: gray;
+  --bs-btn-disabled-border-color: #fff;
 }
